Restore customizations and fix missing elements
- Restored logo image (logo-main.png) to homepage hero section
- Fixed missing service card icons (fa-oil-can, fa-tools instead of invalid fa-engine, fa-tire)
- Restored custom CSS with hero-logo styling
- Updated About page: removed ASE- prefix, deleted certifications card, restored 14 service area cities
- Fixed Business Hours card on contact page: yellow header, Mon-Sat 8-6, 24/7 emergency service details
- Redesigned testimonials section: removed black banner, added avatar circles, yellow star icons
- Updated hero button to yellow (btn-warning)
- Updated Expert Automotive Services tagline to mention commercial fleets, 18-wheelers, semi trucks, and personal vehicles

--- a/contact/index.html
+++ b/contact/index.html
@@ -291,7 +291,7 @@
                         </div>
 
                         <div class="card shadow border-0 rounded-4 mb-4">
-                            <div class="card-header bg-success text-white text-center py-3">
+                            <div class="card-header bg-warning text-dark text-center py-3">
                                 <h5 class="mb-0">
                                     <i class="fas fa-clock me-2"></i>
                                     Business Hours
@@ -299,22 +299,19 @@
                             </div>
                             <div class="card-body p-4">
                                 <div class="hours-item d-flex justify-content-between mb-2">
-                                    <span><strong>Monday - Friday</strong></span>
+                                    <span><strong>Monday - Saturday</strong></span>
                                     <span>8:00 AM - 6:00 PM</span>
                                 </div>
                                 <div class="hours-item d-flex justify-content-between mb-2">
-                                    <span><strong>Saturday</strong></span>
-                                    <span>8:00 AM - 4:00 PM</span>
-                                </div>
-                                <div class="hours-item d-flex justify-content-between">
                                     <span><strong>Sunday</strong></span>
-                                    <span class="text-muted">Closed</span>
+                                    <span>Emergency Only</span>
                                 </div>
                                 <hr>
                                 <p class="mb-0 text-center">
-                                    <small class="text-success">
-                                        <i class="fas fa-info-circle me-1"></i>
-                                        Emergency repairs available
+                                    <small>
+                                        <i class="fas fa-exclamation-circle text-warning me-1"></i>
+                                        <strong>24/7 Emergency Service Available</strong><br>
+                                        <span class="text-muted">After 6:00 PM and Sundays considered emergency service</span>
                                     </small>
                                 </p>
                             </div>
