--- a/index.html
+++ b/index.html
@@ -163,27 +163,14 @@
                             <a href="/contact/" class="btn btn-outline-light btn-lg me-3 mb-2">
                                 <i class="fas fa-comment me-2"></i>Get Free Quote
                             </a>
-                            <a href="tel:(555) 123-4567" class="btn btn-light btn-lg mb-2" data-config-href="tel">
+                            <a href="tel:(555) 123-4567" class="btn btn-warning btn-lg mb-2" data-config-href="tel">
                                 <i class="fas fa-phone me-2"></i><span data-config-text="businessPhoneDisplay">(555) 123-4567</span>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-6 fade-in text-center">
                         <div class="hero-image-container">
-                            <div class="hero-icons">
-                                <div class="floating-icon icon-1">
-                                    <i class="fas fa-wrench fa-2x text-warning"></i>
-                                </div>
-                                <div class="floating-icon icon-2">
-                                    <i class="fas fa-car fa-3x text-light"></i>
-                                </div>
-                                <div class="floating-icon icon-3">
-                                    <i class="fas fa-cogs fa-2x text-warning"></i>
-                                </div>
-                                <div class="floating-icon icon-4">
-                                    <i class="fas fa-tire fa-2x text-light"></i>
-                                </div>
-                            </div>
+                            <img src="/static/img/logo-main.png" alt="Florida Alignment & Suspension Logo" class="hero-logo">
                         </div>
                     </div>
                 </div>
@@ -222,7 +209,7 @@
                 <div class="row">
                     <div class="col-lg-8 mx-auto text-center mb-5 fade-in">
                         <h2 class="display-5 fw-bold text-primary">Expert Automotive Services</h2>
-                        <p class="lead text-muted">Professional repair and maintenance services for all makes and models</p>
+                        <p class="lead text-muted">Professional repair and maintenance for commercial fleets, 18-wheelers, semi trucks, as well as personal vehicles including cars, trucks, and SUVs</p>
                         <div class="section-divider mx-auto"></div>
                     </div>
                 </div>
@@ -361,7 +348,7 @@
                             <div class="card-body text-center p-4">
                                 <div class="service-icon-wrapper mb-4">
                                     <div class="service-icon-bg">
-                                        <i class="fas fa-engine fa-2x text-primary"></i>
+                                        <i class="fas fa-oil-can fa-2x text-primary"></i>
                                     </div>
                                 </div>
                                 <h5 class="card-title h4 mb-3">Minor Engine Repairs</h5>
@@ -393,7 +380,7 @@
                             <div class="card-body text-center p-4">
                                 <div class="service-icon-wrapper mb-4">
                                     <div class="service-icon-bg">
-                                        <i class="fas fa-tire fa-2x text-primary"></i>
+                                        <i class="fas fa-tools fa-2x text-primary"></i>
                                     </div>
                                 </div>
                                 <h5 class="card-title h4 mb-3">Fleet Maintenance &amp; Tire Repairs</h5>
@@ -456,47 +443,71 @@
 
                 <div class="row">
                     <div class="col-lg-4 mb-4">
-                        <div class="card testimonial-card h-100">
-                            <div class="card-body">
-                                <div class="rating mb-3">
-                                    &#9733;&#9733;&#9733;&#9733;&#9733;
+                        <div class="card testimonial-card h-100 shadow-sm border-0">
+                            <div class="card-body p-4">
+                                <div class="rating mb-3 text-warning">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
-                                <blockquote class="blockquote">
-                                    <p>"Excellent service! They fixed my alignment issues quickly and at a fair price. Highly recommend Florida Alignment &amp; Suspension."</p>
-                                    <footer class="blockquote-footer">
-                                        <cite title="Source Title">John Smith</cite>
-                                    </footer>
-                                </blockquote>
+                                <p class="mb-4 text-muted fst-italic">"Excellent service! They fixed my alignment issues quickly and at a fair price. Highly recommend Florida Alignment &amp; Suspension."</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="testimonial-avatar bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px; font-size: 1.25rem; font-weight: bold;">
+                                        JS
+                                    </div>
+                                    <div>
+                                        <p class="mb-0 fw-bold">John Smith</p>
+                                        <small class="text-muted">Tampa, FL</small>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 mb-4">
-                        <div class="card testimonial-card h-100">
-                            <div class="card-body">
-                                <div class="rating mb-3">
-                                    &#9733;&#9733;&#9733;&#9733;&#9733;
+                        <div class="card testimonial-card h-100 shadow-sm border-0">
+                            <div class="card-body p-4">
+                                <div class="rating mb-3 text-warning">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
-                                <blockquote class="blockquote">
-                                    <p>"Professional service and honest pricing. They diagnosed my brake problem accurately and had me back on the road the same day."</p>
-                                    <footer class="blockquote-footer">
-                                        <cite title="Source Title">Maria Rodriguez</cite>
-                                    </footer>
-                                </blockquote>
+                                <p class="mb-4 text-muted fst-italic">"Professional service and honest pricing. They diagnosed my brake problem accurately and had me back on the road the same day."</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="testimonial-avatar bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px; font-size: 1.25rem; font-weight: bold;">
+                                        MR
+                                    </div>
+                                    <div>
+                                        <p class="mb-0 fw-bold">Maria Rodriguez</p>
+                                        <small class="text-muted">St. Petersburg, FL</small>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-4 mb-4">
-                        <div class="card testimonial-card h-100">
-                            <div class="card-body">
-                                <div class="rating mb-3">
-                                    &#9733;&#9733;&#9733;&#9733;&#9733;
+                        <div class="card testimonial-card h-100 shadow-sm border-0">
+                            <div class="card-body p-4">
+                                <div class="rating mb-3 text-warning">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
                                 </div>
-                                <blockquote class="blockquote">
-                                    <p>"Great experience with their DOT inspection service. Fast, thorough, and professional. Will definitely be back."</p>
-                                    <footer class="blockquote-footer">
-                                        <cite title="Source Title">Dave Johnson</cite>
-                                    </footer>
-                                </blockquote>
+                                <p class="mb-4 text-muted fst-italic">"Great experience with their DOT inspection service. Fast, thorough, and professional. Will definitely be back."</p>
+                                <div class="d-flex align-items-center">
+                                    <div class="testimonial-avatar bg-primary text-white rounded-circle d-flex align-items-center justify-content-center me-3" style="width: 50px; height: 50px; font-size: 1.25rem; font-weight: bold;">
+                                        DJ
+                                    </div>
+                                    <div>
+                                        <p class="mb-0 fw-bold">Dave Johnson</p>
+                                        <small class="text-muted">Clearwater, FL</small>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
