--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
 
                     <h3 class="mt-4">Why Choose Us?</h3>
                     <ul>
-                        <li><strong>Experienced Technicians:</strong> Our ASE-certified mechanics have decades of experience</li>
+                        <li><strong>Experienced Technicians:</strong> Our certified mechanics have decades of experience</li>
                         <li><strong>Quality Parts:</strong> We use only high-quality OEM and aftermarket parts</li>
                         <li><strong>Fair Pricing:</strong> Competitive rates with transparent, upfront estimates</li>
                         <li><strong>Customer Service:</strong> We treat every customer like family</li>
@@ -133,27 +133,23 @@
                 <div class="col-lg-4">
                     <div class="card shadow">
                         <div class="card-body">
-                            <h5 class="card-title">Our Certifications</h5>
-                            <p>We maintain the highest industry standards:</p>
-                            <ul class="list-unstyled">
-                                <li><i class="fas fa-check text-success"></i> ASE Certified Technicians</li>
-                                <li><i class="fas fa-check text-success"></i> DOT Inspection Station</li>
-                                <li><i class="fas fa-check text-success"></i> BBB Accredited Business</li>
-                                <li><i class="fas fa-check text-success"></i> Licensed &amp; Insured</li>
-                            </ul>
-                        </div>
-                    </div>
-
-                    <div class="card shadow mt-4">
-                        <div class="card-body">
                             <h5 class="card-title">Service Area</h5>
                             <p>We proudly serve:</p>
                             <ul class="list-unstyled">
                                 <li>Tampa, FL</li>
-                                <li>Winter Park, FL</li>
-                                <li>Altamonte Springs, FL</li>
-                                <li>Longwood, FL</li>
-                                <li>Casselberry, FL</li>
+                                <li>St. Petersburg, FL</li>
+                                <li>Clearwater, FL</li>
+                                <li>Largo, FL</li>
+                                <li>Brandon, FL</li>
+                                <li>Wesley Chapel, FL</li>
+                                <li>Land O' Lakes, FL</li>
+                                <li>Temple Terrace, FL</li>
+                                <li>Lutz, FL</li>
+                                <li>Oldsmar, FL</li>
+                                <li>Valrico, FL</li>
+                                <li>Palm Harbor, FL</li>
+                                <li>Apollo Beach, FL</li>
+                                <li>Sarasota, FL</li>
                             </ul>
                         </div>
                     </div>
